# jsonschema-fast

./: Cargo.toml  README.md  README.rst  benchmark_invalid.py  benchmark_json_buffer.py  benchmark_large.py  benchmark_perf.py  benchmark_pyperf.py  benchmark_rust_poc.py  noxfile.py  pyproject.toml  run_black_box_tests.py  test_format.rs  test_rust_errors.rs  test_rust_poc.py
.github/workflows/: build_wheels.yml  ci.yml
docs/: conf.py  creating.rst  errors.rst  faq.rst  index.rst  referencing.rst  requirements.in  requirements.txt  spelling-wordlist.txt  validate.rst
docs/api/: index.rst
jsonschema/: __init__.py  cli.py  validators.py
jsonschema/tests/: test_cli.py  test_deprecations.py
jsonschema_fast/: __init__.py  __main__.py  _format.py  _keywords.py  _legacy_keywords.py  _types.py  _typing.py  cli.py  exceptions.py  protocols.py  validators.py
jsonschema_fast/benchmarks/: const_vs_enum.py  contains.py  import_benchmark.py  issue232.py  json_schema_test_suite.py  nested_schemas.py  subcomponents.py  unused_registry.py  useless_applicator_schemas.py  useless_keywords.py  validator_creation.py
rust_poc/: Cargo.toml  pyproject.toml
rust_poc/src/: lib.rs
scratch/: inspect_default_registry.py  inspect_registry.py  inspect_resource.py  test_diag.py  test_error_tree.py  test_error_tree_anyof.py  test_if.py  test_not.py  test_ref_registry.py  test_regex.py  test_regex_a.py  test_regex_a_flag.py  test_regex_i.py  test_regex_u_flag.py  test_regex_z.py  test_regex_z_integration.py  test_regex_z_lower.py  test_rust_anyof.py  test_rust_if.py
src/: lib.rs
(+15 files in other folders)
